--- a/src/pages/dashboard.html
+++ b/src/pages/dashboard.html
@@ -10,7 +10,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="../sass/main.scss" />
-    <title>Дошка</title>
+    <title>EDTEch | Дошка</title>
   </head>
   <body class="tab__body">
     <div class="tab">
