--- a/src/pages/lessons.html
+++ b/src/pages/lessons.html
@@ -10,7 +10,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="../sass/main.scss" />
-    <title>Уроки</title>
+    <title>EDTech | Уроки</title>
     <style>
       .tab__list__item a {
         display: flex;
@@ -133,14 +133,6 @@
           компонентів. Ми вивчимо якісні та кількісні методи аналізу, такі як
           хроматографія, спектроскопія та інші.
         </p>
-      </div>
-    </div>
-    <div class="sidebar">
-      <div class="season-icon">
-        <i id="seasonIcon" class="fas"></i>
-      </div>
-      <div class="current-date">
-        <span id="date"></span>
       </div>
     </div>
     <script type="module" src="../js/tab.js"></script>
