--- a/src/pages/lessons2.html
+++ b/src/pages/lessons2.html
@@ -10,7 +10,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="../sass/main.scss" />
-    <title>Органічна хімія</title>
+    <title>EDTech | Органічна хімія</title>
   </head>
 
   <body class="tab__body">
@@ -59,14 +59,6 @@
 
     <div id="lessonModal">
       <div id="lessonContent"></div>
-    </div>
-    <div class="sidebar">
-      <div class="season-icon">
-        <i id="seasonIcon" class="fas"></i>
-      </div>
-      <div class="current-date">
-        <span id="date"></span>
-      </div>
     </div>
     <script type="module" src="../js/tab.js"></script>
     <script src="../js/learning2.js"></script>
