--- a/src/pages/lessons3.html
+++ b/src/pages/lessons3.html
@@ -10,87 +10,8 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="../sass/main.scss" />
-    <title>Аналітична хімія</title>
-    <style>
-      /* Styles for lessons */
-      #lessonsContainer {
-        display: flex;
-        flex-direction: column;
-        gap: 15px;
-        padding: 20px;
-      }
+    <title>EDTech | Аналітична хімія</title>
 
-      #lessonsContainer button {
-        background-color: #001c27;
-        color: white;
-        border: none;
-        border-radius: 6px;
-        padding: 12px 25px;
-        font-size: 18px;
-        cursor: pointer;
-        transition: background-color 0.2s, box-shadow 0.2s;
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-      }
-
-      #lessonsContainer button:hover {
-        background-color: #003045;
-      }
-
-      /* Styles for the lesson modal */
-      #lessonModal {
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background: rgba(0, 0, 0, 0.7);
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        display: none;
-      }
-
-      #lessonContent {
-        background: white;
-        padding: 30px;
-        border-radius: 8px;
-        max-width: 700px;
-        width: 100%;
-        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
-        max-height: 80vh;
-        overflow-y: auto;
-      }
-
-      #completeLessonButton {
-        margin-top: 20px;
-        padding: 12px 25px;
-        background-color: #001c27;
-        color: white;
-        border: none;
-        border-radius: 6px;
-        cursor: pointer;
-        transition: background-color 0.2s, box-shadow 0.2s;
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-      }
-
-      #completeLessonButton:hover {
-        background-color: #003045;
-      }
-
-      /* Styles for profile circle */
-      .profile-circle {
-        display: inline-flex;
-        align-items: center;
-        justify-content: center;
-        width: 40px;
-        height: 40px;
-        border-radius: 50%;
-        background-color: #007bff;
-        color: white;
-        font-size: 18px;
-        text-decoration: none;
-      }
-    </style>
   </head>
 
   <body class="tab__body">
@@ -140,89 +61,7 @@
     <div id="lessonModal">
       <div id="lessonContent"></div>
     </div>
-
-    <div class="sidebar">
-      <div class="season-icon">
-        <i id="seasonIcon" class="fas"></i>
-      </div>
-      <div class="current-date">
-        <span id="date"></span>
-      </div>
-    </div>
     <script type="module" src="../js/tab.js"></script>
-    <script>
-      document.addEventListener("DOMContentLoaded", () => {
-        const lessons = [
-        
-  {
-    "id": 1,
-    "name": "Основи аналітичної хімії",
-    "content": `Аналітична хімія є галуззю хімії, яка займається вивченням складу речовин і визначенням їхніх компонентів. Вона включає кількісний і якісний аналіз, які є основними інструментами для дослідження хімічних систем. Якісний аналіз дозволяє виявити наявність певних елементів або сполук у зразках, тоді як кількісний аналіз забезпечує точну оцінку їх концентрацій. У цьому уроці ми детально розглянемо основи лабораторних методів, таких як титрування, спектроскопія та хроматографія. Титрування використовує реакцію між зразком і реактивом для визначення концентрації компонента. Спектроскопія базується на вимірюванні поглинання або випромінювання світла речовинами для ідентифікації їхніх властивостей. Хроматографія допомагає розділити суміші на окремі компоненти за допомогою їхньої взаємодії з різними фазами. Цей урок надасть фундаментальні знання про ці методи і їх застосування в науці та промисловості, що є важливим для проведення точних хімічних досліджень.`
-  },
-  {
-    "id": 2,
-    "name": "Методи якісного аналізу",
-    "content": `Якісний аналіз є важливою частиною аналітичної хімії, яка дозволяє виявити наявність певних іонів або молекул у зразках. У цьому уроці ми детально розглянемо різні методи якісного аналізу, такі як реакції осадження, кольорові реакції і тестування на присутність конкретних елементів. Реакції осадження допомагають ідентифікувати іони шляхом утворення нерозчинних осадів. Кольорові реакції використовують зміну кольору як індикатор присутності певних сполук. Тестування на елементи включає використання хімічних реактивів для виявлення специфічних елементів у зразках. Вивчимо основи роботи з хімічними реактивами, техніками та інструментами, які використовуються для якісного аналізу. Знання цих методів є критично важливим для проведення досліджень у хімії та біохімії, оскільки вони дозволяють швидко і точно ідентифікувати компоненти зразків.`
-  },
-  {
-    "id": 3,
-    "name": "Методи кількісного аналізу",
-    "content": `Кількісний аналіз в аналітичній хімії дозволяє визначити точну концентрацію компонентів у зразках. У цьому уроці ми розглянемо різні методи кількісного аналізу, такі як титрування, спектрофотометрія і мас-спектрометрія. Титрування є процесом додавання реактиву до зразка до досягнення точки еквівалентності, що дозволяє точно визначити концентрацію компонента. Спектрофотометрія використовує вимірювання поглинання світла певної довжини хвилі для оцінки концентрації речовин. Мас-спектрометрія дозволяє визначити молекулярну масу і склад зразка шляхом іонізації і вимірювання маси іонів. Вивчимо основи кожного з цих методів, а також їхні переваги та обмеження. Кількісний аналіз є важливим для точного визначення складу та концентрації компонентів у зразках, що є необхідним для контролю якості, досліджень і промислових застосувань.`
-  },
-  {
-    "id": 4,
-    "name": "Хроматографічні методи",
-    "content": `Хроматографія є потужною технікою для розділення компонентів суміші на основі їхніх фізико-хімічних властивостей. У цьому уроці ми розглянемо різні види хроматографії, включаючи тонкошарову хроматографію (ТСХ), рідинну хроматографію (РХ) і газову хроматографію (ГХ). Тонкошарова хроматографія використовує тонкий шар адсорбенту для розділення компонентів зразка, а рідинна хроматографія дозволяє розділити компоненти зразка за допомогою рідкої рухомої фази. Газова хроматографія відрізняється тим, що використовує газ як рухому фазу для розділення компонентів. Вивчимо принципи роботи хроматографічних колонок, стаціонарних і рухомих фаз, а також інтерпретацію хроматографічних даних. Хроматографія є важливим інструментом для аналізу складних сумішей в хімії, біології та медицині.`
-  },
-  {
-    "id": 5,
-    "name": "Сучасні аналітичні техніки",
-    "content": `Сучасні аналітичні техніки постійно розвиваються, впроваджуючи нові методи і інструменти для точного аналізу речовин. У цьому уроці ми розглянемо новітні технології, такі як атомно-абсорбційна спектроскопія, мас-спектрометрія з індуктивно зв'язаною плазмою (ICP-MS) і ядерний магнітний резонанс (ЯМР). Атомно-абсорбційна спектроскопія дозволяє визначити концентрацію елементів у зразках шляхом вимірювання поглинання світла атомами. ICP-MS використовується для аналізу металів і інших елементів на дуже низьких концентраціях завдяки високій чутливості і роздільній здатності. ЯМР є технікою, яка дозволяє визначити структуру молекул на основі їхньої взаємодії з магнітним полем. Вивчимо, як ці техніки використовуються для аналізу різних матеріалів, таких як біологічні зразки, довкілля і промислові продукти, а також їхні переваги і обмеження в порівнянні з традиційними методами аналітичної хімії.`
-  }
-
-
-        ];
-
-        const lessonsContainer = document.getElementById("lessonsContainer");
-        const lessonModal = document.getElementById("lessonModal");
-        const lessonContent = document.getElementById("lessonContent");
-
-        lessons.forEach((lesson) => {
-          const button = document.createElement("button");
-          button.textContent = lesson.name;
-          button.addEventListener("click", () => {
-            lessonContent.innerHTML = `
-            <h2>${lesson.name}</h2>
-            <p>${lesson.content}</p>
-          `;
-
-            lessonModal.style.display = "flex";
-          });
-          lessonsContainer.appendChild(button);
-        });
-
-  
-        window.addEventListener("click", (event) => {
-          if (event.target === lessonModal) {
-            lessonModal.style.display = "none";
-          }
-        });
-
-
-        const profileButton = document.querySelector("#profileCircle");
-
-        const updateProfileButton = () => {
-          const userProfile = localStorage.getItem("userProfile");
-          if (userProfile) {
-            const user = JSON.parse(userProfile);
-            profileButton.textContent = user.name[0].toUpperCase();
-          } else {
-            profileButton.style.display = "none";
-          }
-        };
-
-        updateProfileButton();
-      });
-    </script>
+    <script type="module" src="../js/learning3.js"></script>
   </body>
 </html>
